templates/icingaweb_template.yaml
---
# Source: icingaweb/templates/service.yaml
# icingaweb service: expose service.port (8080)
apiVersion: v1
kind: Service
metadata:
  name: icingaweb
  labels:
    app.kubernetes.io/name: icingaweb
    helm.sh/chart: icingaweb-1.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: icingaweb
      port: 8080
      targetPort: icingaweb
      nodePort: null
  selector:
    app.kubernetes.io/name: icingaweb
    app.kubernetes.io/instance: release-name
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 7200
---
# Source: icingaweb/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-icingaweb
  labels:
    app.kubernetes.io/name: icingaweb
    helm.sh/chart: icingaweb-1.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: icingaweb
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: icingaweb
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: icingaweb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: icingaweb
        helm.sh/chart: icingaweb-1.0.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: icingaweb
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: icingaweb
                app.kubernetes.io/name: icingaweb
            topologyKey: app.kubernetes.io/hostname
      # Init contaiter: change own for icingaweb config directory and waiting for icinga master
      imagePullSecrets:
      - name: ghcr-pull-secret
      containers:
      # icingaweb container
      - name: icingaweb
        image: svtechnmaa/svtech_icingaweb2:v1.0.2 # svtechnmaa/svtech_icingaweb2:v1.0.2
        imagePullPolicy: "IfNotPresent"
        securityContext:
          runAsUser: 33
          runAsGroup: 33
        ports:
        - name: icingaweb
          containerPort: 8080
        ## ENV
        volumeMounts:
          # icingaweb http config
          - name: icingaweb-http
            mountPath: /etc/apache2/conf-enabled/icingaweb2.conf
            subPath: icingaweb2.conf
          # icingaweb graphs
          - name: icingaweb-graphs
            mountPath: /data/etc/icingaweb2/modules/grafana/graphs.ini
            subPath: graphs.ini
          # shareVolume
          - name: icingaweb-volume
            mountPath: /data
      # director module container
      - name: director
        image: svtechnmaa/svtech_icingaweb2:v1.0.2 # svtechnmaa/svtech_icingaweb2:v1.0.2
        imagePullPolicy: "IfNotPresent"
        ## ENV
        command: []
        args:
          - /bin/bash
          - -ce
          - |
            icingacli director migration run
            (icingacli director kickstart required && icingacli director kickstart run && icingacli director config deploy) || true
            icingacli director daemon run
      volumes:
        # icingaweb http 
        - name: icingaweb-http
          configMap:
            name: icingaweb-http
        # icingaweb graphs
        - name: icingaweb-graphs
          configMap:
            name: icingaweb-graphs
        # shareVome
        - name: icingaweb-volume
          persistentVolumeClaim:
            claimName: icingaweb-pvc
---
# Source: icingaweb/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icingaweb-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: default
  rules:
  - http:
      paths:
      - path: /icingaweb
        pathType: Prefix
        backend:
          service:
            name: icingaweb
            port:
              number: 8080
